# fex

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
cmake/: fex.pc.in  fexConfig.cmake.in
doc/: FeX-implementation.md  FeX-lang!md  FeX-lang.md  capi.md  impl.md  lang.md
scripts/: fib.fex  gc_test.fex  life.fex  mandelbrot.fex  test.fex  test_basic_module.fex  test_bytes.fex  test_implicit_file_modules.fex  test_json_path_helpers.fex  test_lists.fex  test_maps.fex  test_module_as_value.fex  test_module_binding_by_spec.fex  test_module_imports.fex  test_module_package_ergonomics.fex  test_module_packages.fex  test_multiple_exports.fex  test_namespacing.fex  test_pair_selectors.fex
scripts/import_cycles/: cycle_a.fex  cycle_b.fex
scripts/import_file_modules/: app.fex  error_import_runtime.fex  error_literal.fex  helper.fex
scripts/import_file_modules/feature/: helper.fex  index.fex
scripts/import_modules/: app.fex  helper.fex
scripts/import_packages/feature/: helper.fex  index.fex  mismatch.fex  relative_importer.fex
src/: fe.c  fe.h  fe_fixnum.h  fex.c  fex.h  fex_builtins.c  fex_builtins.h  fex_internal.h  fex_span.c  fex_span.h  main.c  sfc32.c  sfc32.h
tools/: check_install_layout.py  run_regression_tests.py  test_try_api.c
tools/install_smoke/: CMakeLists.txt  main.c
